--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,5 +31,5 @@
 	<script src="{{ "/js/transition.js" }}"></script>
 	<script src="{{ "/js/jquery.scrollUp.min.js" }}"></script>
 	<script type="text/javascript" src="https://cdn.bounce.bar/115421.js"></script>
-	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 	<script>$(function(){$.scrollUp({scrollName:"scrollUp",topDistance:"300",topSpeed:300,animation:"slide",animationInSpeed:200,animationOutSpeed:200,scrollText:"Scroll to top",activeOverlay:!1})});</script>
