--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,7 @@ layout: default
 ---
 <article itemscope itemtype="http://schema.org/BlogPosting">
   <header>
-    <h2 itemprop="name headline">{{ page.title }}</h2>
-    <h5 class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</h5>
+    <h2 itemprop="name headline">{{ page.title }} <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></h2>
 	 {{ content }}
   </header>
 </article>
@@ -15,12 +14,12 @@ layout: default
   <ul class="related-posts">
     {% for post in site.related_posts limit:5 %}
       <li>
-        <h3>
+        <h2>
           <a href="{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
-        </h3>
+        </h2>
       </li>
     {% endfor %}
   </ul>
