--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,18 +9,16 @@ layout: default
 </article>
 <hr>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:5 %}
-      <li>
-        <h2>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
+<div class="previous-next-nav">
+	<nav>
+		<ul class="pager">
+			{% if page.previous.url %}
+				<li class="previous disabled"><a href="{{page.previous.url}}"><span aria-hidden="true">&larr;</span> {{page.previous.title}}</a></li>
+			{% endif %}	
+			{% if page.next.url %}
+				<li class="next"><a href="{{page.next.url}}">{{page.next.title}} <span aria-hidden="true">&rarr;</span></a></li>
+			{% endif %}	
+		</ul>
+	</nav>
 </div>
+ 
