--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 	<nav>
 		<ul class="pager">
 			{% if page.previous.url %}
-				<li class="previous disabled"><a href="{{page.previous.url}}"><span aria-hidden="true">&larr;</span> {{page.previous.title}}</a></li>
+				<li class="previous"><a href="{{page.previous.url}}"><span aria-hidden="true">&larr;</span> {{page.previous.title}}</a></li>
 			{% endif %}	
 			{% if page.next.url %}
 				<li class="next"><a href="{{page.next.url}}">{{page.next.title}} <span aria-hidden="true">&rarr;</span></a></li>
