--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <div class="jumbotron">
 	<div class="container">
 		<center>
-			<img src="/img/logo-bw.png" class="img-responsive" alt="Medium">
+			<a href="/">
+				<img src="/img/logo-bw.png" class="img-responsive" alt="Medium">
+			</a>
 		</center>	
     </div>
 </div>
@@ -10,7 +12,7 @@
 	<div class="container">
 		<div class="row col-md-offset-2">
 			<div class="col-md-10">
-				<h1>#UnblockMedium</h1>
+				<h1>Unblock Medium</h1>
 				<p>The Malaysian Government, Malaysian Communications And Multimedia Commission (MCMC) blocked the blog-publishing platform <a href="https://medium.com/about/about-medium-9eac453da935" target="_blank">Medium</a>.</p>
 				<p>We decided to make a short, simplified 'reporting' (of some kind) on this issue. We are in no way part of Medium. We are against any type of Internet Censorship &amp; abuse. </p>
 				<hr>
