--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,9 @@
 			<a href="/">
 				<img src="/img/logo-bw.png" class="img-responsive" alt="Medium">
 			</a>
+			<br>
+			<div class="fb-share-button" data-href="http://unblockmedium.github.io" data-layout="button_count"></div>
+			<div class="fb-like" data-href="http://unblockmedium.github.io" data-layout="standard" data-action="like"  data-show-faces="true"></div>
 		</center>	
     </div>
 </div>
