--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,11 +25,7 @@
 	</div>
 </div>
 
-    <script src="{{ "/js/jquery.min.js" }}"></script>
-	<script src="{{ "/js/bootstrap.min.js" }}"></script>
-	<script src="{{ "/js/zoom.min.js" }}"></script>
-	<script src="{{ "/js/transition.js" }}"></script>
-	<script src="{{ "/js/jquery.scrollUp.min.js" }}"></script>
+    <script src="{{ "/js/app.js" }}"></script>
 	<script type="text/javascript" src="http://cdn.bounce.bar/115421.js"></script>
 	<script type="text/javascript" src="http://static.medium.com/embed.js"></script>
 	<script async type="text/javascript" src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
