--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,4 +16,5 @@
 				<h1>Unblock Medium</h1>
 				<p>The Malaysian Government, Malaysian Communications And Multimedia Commission (MCMC) blocked the blog-publishing platform <a href="https://medium.com/about/about-medium-9eac453da935" target="_blank">Medium</a>.</p>
 				<p>We decided to make a short, simplified 'reporting' (of some kind) on this issue. We are in no way part of Medium. We are against any type of Internet Censorship.</p>
+				<p>Follow the <a href="https://www.facebook.com/UnblockMedium/" target="_blank">Unblock Medium</a> Community on Facebook and tweet with a <a href="https://twitter.com/search?src=typd&q=%23UnblockMedium" target="_blank">#UnblockMedium</a></p>
 				<hr>
