--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 				<h3>Legal</h3>
-				<p>In the official Electronic mail sent by MCMC to Medium, it had stated "Section 233 of Communications and Multimedia Act 1998".</p>
+				<p>In the official Electronic mail sent by MCMC to Medium, it did state "Section 233 of Communications and Multimedia Act 1998".</p>
 				<p>For the convenience of all our readers, we embeded the link to Section 233 (Improper use of network facilities or network service, etc), which can be accessed via the Official Malaysian Communications And Multimedia Commission (MCMC) website.</p>
 				<a href="http://www.skmm.gov.my/skmmgovmy/media/General/pdf/Act588bi_1.pdf" target="_blank" class="btn btn-primary btn-lg pull-center">Download PDF</a>	
 				<a href="http://www.skmm.gov.my/commons/viewdetail.aspx?docid=560&csrt=16142382241485565584" target="_blank" class="btn btn-default btn-lg pull-center">Read Section 233</a>
