--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="theme-color" content="#58595b">
 	<title>Unblock Medium &middot; A Daily Report{% if page.title %}Unblock Medium &middot; A Daily Report: {{ page.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
