--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,9 @@
 		</div>
 	</div>
 </div>
-
+	
 	<script src="{{ "/js/app.js" }}"></script>
-	<script type="text/javascript" src="http://cdn.bounce.bar/115421.js"></script>
+	<!-- <script type="text/javascript" src="http://cdn.bounce.bar/115421.js"></script> -->
 	<script type="text/javascript" src="http://static.medium.com/embed.js"></script>
 	<script async type="text/javascript" src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<script>$(function(){$.scrollUp({scrollName:"scrollUp",topDistance:"300",topSpeed:300,animation:"slide",animationInSpeed:200,animationOutSpeed:200,scrollText:"Scroll to top",activeOverlay:!1})});</script>
