--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,21 @@
 					<a href="{{ link.url }}">{{ link.title }}</a>
 				</li>
 				{% endfor %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Posts <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+					{% for post in site.posts %}
+						<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+					 {% endfor %}
+					</ul>
+				</li>
             </ul>
         </div>
     </div>
 </nav>
+
+
+{% for post in site.posts %}	
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>			
+{% endfor %}	
