--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,10 +22,10 @@
 				{% endfor %}
 				
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Posts <span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports by Date <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 					{% for post in site.posts %}
-						<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+						<li><a href="{{ post.url }}">{{ post.title }} &middot; {{ post.date | date: "%B %e %Y" }}</a></li>
 					 {% endfor %}
 					</ul>
 				</li>
