--- a/css/style.css
+++ b/css/style.css
@@ -1153,8 +1153,7 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 50px 0;
   border: 0;
   border-top: 1px solid #eee;
 }
