--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,17 @@
 		</div>
 	</div>
 </div>
-	
+
+<div class="um-footer">
+	<div class="container text-center">
+		<div class="row col-md-offset-2">
+			<div class="col-md-10">	
+				<p>Gently ask MCMC to unblock Medium via <a href="https://twitter.com/home?status=Dear%20%40SKMM_MCMC%0A%0AWe%20kindly%20ask%20that%20you%20unblock%20%40Medium%20in%20Malaysia.%20We%20do%20not%20subscribe%20to%20any%20Internet%20Censorship%20%23UnblockMedium%0A%0ARegards." target="_blank">Twitter</a></p>
+			</div>
+	 	</div> 
+    </div>  
+</div>
+
 	<script src="{{ "/js/app.js" }}"></script>
 	<script type="text/javascript" src="//cdn.bounce.bar/115421.js"></script>
 	<script async type="text/javascript" src="//static.medium.com/embed.js"></script>
