--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 {% include navbar.html %}
- 
+
+{% include jumbotron.html %}
+
 <div class="ffs-unblock-medium">
 	<div class="container">
 		<div class="row col-md-offset-2">
