--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,11 +16,20 @@
 				{% if page.url contains link.url %}
 					{% assign current = 'current' %}
 				{% endif %}
-				<li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+				<li class="{% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
 					<a href="{{ link.url }}">{{ link.title }}</a>
 				</li>
 				{% endfor %}
-				
+				{% if site.twitter_handle %}
+				<li>
+					<a href="//twitter.com/{{ site.twitter_handle }}" target="_blank">Twitter</a>
+				</li>
+				{% endif %}
+				{% if site.facebook_community %}
+				<li>
+					<a href="//twitter.com/{{ site.facebook_community }}" target="_blank">Facebook</a>
+				</li>
+				{% endif %}
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports by Date <span class="caret"></span></a>
 					<ul class="dropdown-menu">
