Copy-paste fail, srsly!

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
 				{% endif %}
 				{% if site.facebook_community %}
 				<li>
-					<a href="//twitter.com/{{ site.facebook_community }}" target="_blank">Facebook</a>
+					<a href="//facebook.com/{{ site.facebook_community }}" target="_blank">Facebook</a>
 				</li>
 				{% endif %}
 				<li class="dropdown">
