--- a/css/style.css
+++ b/css/style.css
@@ -1088,8 +1088,8 @@ body {
   font-weight: 400;
   font-size: 18px;
   letter-spacing: 0.3px;
-  line-height: 38px;
-  color: #333; 
+  line-height: 35px;
+  color: #58595b; 
   background-color: #fff;
 }
 .ffs-unblock-medium {
