--- a/css/style.css
+++ b/css/style.css
@@ -5044,9 +5044,9 @@ a.badge:focus {
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .jumbotron {
+  /*.jumbotron {
     padding-top: 48px;
-  }
+  }*/
   .container .jumbotron,
   .container-fluid .jumbotron {
     padding-right: 60px;
