--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 </div>
 
 	<script src="{{ "/js/app.js" }}"></script>
-	<!-- <script type="text/javascript" src="//cdn.bounce.bar/115421.js"></script> -->
+	<!-- <script type="text/javascript" src="//cdn.bounce.bar/115421.js"></script> 
 	<script async type="text/javascript" src="//static.medium.com/embed.js"></script>
-	<script async type="text/javascript" src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<script async type="text/javascript" src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 	<script>$(function(){$.scrollUp({scrollName:"scrollUp",topDistance:"300",topSpeed:300,animation:"slide",animationInSpeed:200,animationOutSpeed:200,scrollText:"Scroll to top",activeOverlay:!1})});</script>
