--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-@import url(https://fonts.googleapis.com/css?family=Merriweather|Open+Sans:300,400,700,800);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
