--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta name="theme-color" content="#58595b">
-	<title>Unblock Medium &middot; A Daily Report{% if page.title %}Unblock Medium &middot; A Daily Report: {{ page.title }}{% endif %}</title>
+	<title>Unblock Medium &middot; A Daily Report {% if page.title %}&middot; {{ page.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 	<link rel="icon" href="{{ "/img/favicon.ico" }}">
