--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row col-md-offset-2">
 			<div class="col-md-10">
-				<h1 class="text-center">Unblock Medium</h1>
+				<h1 class="text-center">Unblock <mark>Medium</mark></h1>
 			</div>
 		</div>
 	</div>
