--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,12 @@
 	<link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+	
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@UnblockMedium" />
+	<meta name="twitter:creator" content="@UnblockMedium" />
+	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+	<meta property="og:title" content="Unblock Medium &middot; A Daily Report {% if page.title %}&middot; {{ page.title }}{% endif %}" />
+	<meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+	<meta property="og:image" content="{{ "/img/banner.png" }}" />
 </head>
