--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -32,7 +32,7 @@
 				{% endif %}
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports by Date <span class="caret"></span></a>
-					<ul class="dropdown-menu">
+					<ul class="um-scroll-menu dropdown-menu">
 					{% for post in site.posts %}
 						<li><a href="{{ post.url }}">{{ post.title }} &middot; {{ post.date | date: "%B %e %Y" }}</a></li>
 					 {% endfor %}
