--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,12 +11,22 @@
 </div>
 
 <div class="um-footer">
-	<div class="container text-center">
+	<div class="container">
 		<div class="row col-md-offset-2">
-			<div class="col-md-10">	
-				<p>Gently ask MCMC to unblock Medium via <a href="https://twitter.com/home?status=Dear%20%40SKMM_MCMC%0A%0AWe%20kindly%20ask%20that%20you%20unblock%20%40Medium%20in%20Malaysia.%20We%20do%20not%20subscribe%20to%20any%20Internet%20Censorship%20%23UnblockMedium%0A%0ARegards." target="_blank">Twitter</a></p>
+			<div class="col-md-5">
+				<div class="um-msg-box">
+					<p>Dear @SKMM_MCMC<br><br>We kindly ask that you unblock @Medium in Malaysia. We do not subscribe to any Internet Censorship #UnblockMedium<br><br>Regards.</p>
+				</div>
+				<div class="um-msg-social text-center">
+					<a href="#" class="btn btn-tw">Post on Twitter</a>
+					<a href="#" class="btn btn-fb">Post on Facebook</a>
+				</div>	
 			</div>
-	 	</div> 
+			<div class="col-md-5 um-pad">	
+				<p>Contact the Malaysian Communications and Multimedia Commission via Electronic Mail and/or via a good ole Phone call.</p>
+				<p>Tel: (+60) 3-8688-8000<br>E-mail: scd@cmc.gov.my<br>Website: www.mcmc.gov.my</p><p>Keep calm and ask away</p>
+			</div>	
+		</div> 
     </div>  
 </div>
 
