--- a/css/style.css
+++ b/css/style.css
@@ -1496,9 +1496,12 @@ abbr[data-original-title] {
 }
 blockquote {
   padding: 10px 20px;
-  margin: 0 0 20px;
-  font-size: 17.5px;
+  margin: 35px;
+  font-size: 16px;
+  font-style: italic;
   border-left: 5px solid #eee;
+  background: #fafafa;
+    
 }
 blockquote p:last-child,
 blockquote ul:last-child,
