--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 					<p>Dear @SKMM_MCMC<br><br>We kindly ask that you unblock @Medium in Malaysia. We do not subscribe to any Internet Censorship #UnblockMedium<br><br>Regards.</p>
 				</div>
 				<div class="um-msg-social text-center">
-					<a href="https://twitter.com/home?status=Dear%20%40SKMM_MCMC%0A%0AWe%20kindly%20ask%20that%20you%20unblock%20%40Medium%20in%20Malaysia.%20We%20do%20not%20subscribe%20to%20any%20Internet%20Censorship%20%23UnblockMedium%0A%0ARegards." class="btn btn-tw" target="_blank">Post on Twitter</a>
+					<a href="https://twitter.com/home?status=Dear%20%40SKMM_MCMC%0A%0AWe%20kindly%20ask%20that%20you%20unblock%20%40Medium%20in%20Malaysia.%20We%20do%20not%20subscribe%20to%20any%20Internet%20Censorship%20%23UnblockMedium%0A%0ARegards." class="btn btn-tw" target="_blank"><i class="fa fa-twitter"></i> Post on Twitter</a>
 				</div>	
 			</div>
 			<div class="col-md-5 um-pad">	
