--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="col-md-5 um-pad">	
 				<p>Contact the Malaysian Communications and Multimedia Commission via Electronic Mail and/or via a good ole Phone call.</p>
-				<p>Tel: (+60) 3-8688-8000<br>E-mail: scd@cmc.gov.my<br>Website: www.mcmc.gov.my</p><p>Keep calm and ask away</p>
+				<p>Tel: 1-800-188-030<br>E-mail: aduanskmm@cmc.gov.my<br>Website: <a href="https://aduan.skmm.gov.my/" target="_blank">aduan.skmm.gov.my</a></p><p>Keep calm and ask away</p>
 			</div>	
 		</div> 
     </div>  
