--- a/css/style.css
+++ b/css/style.css
@@ -2561,60 +2561,60 @@ fieldset[disabled] .btn-warning.focus {
   color: #f0ad4e;
   background-color: #fff;
 }
-.btn-danger {
+.btn-petition {
   color: #fff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
+  background-color: #ec2c22;
+  border-color: #ec2c22;
 }
-.btn-danger:focus,
-.btn-danger.focus {
+.btn-petition:focus,
+.btn-petition.focus {
   color: #fff;
   background-color: #c9302c;
   border-color: #761c19;
 }
-.btn-danger:hover {
+.btn-petition:hover {
   color: #fff;
   background-color: #c9302c;
   border-color: #ac2925;
 }
-.btn-danger:active,
-.btn-danger.active,
-.open > .dropdown-toggle.btn-danger {
+.btn-petition:active,
+.btn-petition.active,
+.open > .dropdown-toggle.btn-petition {
   color: #fff;
   background-color: #c9302c;
   border-color: #ac2925;
 }
-.btn-danger:active:hover,
-.btn-danger.active:hover,
-.open > .dropdown-toggle.btn-danger:hover,
-.btn-danger:active:focus,
-.btn-danger.active:focus,
-.open > .dropdown-toggle.btn-danger:focus,
-.btn-danger:active.focus,
-.btn-danger.active.focus,
-.open > .dropdown-toggle.btn-danger.focus {
+.btn-petition:active:hover,
+.btn-petition.active:hover,
+.open > .dropdown-toggle.btn-petition:hover,
+.btn-petition:active:focus,
+.btn-petition.active:focus,
+.open > .dropdown-toggle.btn-petition:focus,
+.btn-petition:active.focus,
+.btn-petition.active.focus,
+.open > .dropdown-toggle.btn-petition.focus {
   color: #fff;
   background-color: #ac2925;
   border-color: #761c19;
 }
-.btn-danger:active,
-.btn-danger.active,
-.open > .dropdown-toggle.btn-danger {
+.btn-petition:active,
+.btn-petition.active,
+.open > .dropdown-toggle.btn-petition {
   background-image: none;
 }
-.btn-danger.disabled:hover,
-.btn-danger[disabled]:hover,
-fieldset[disabled] .btn-danger:hover,
-.btn-danger.disabled:focus,
-.btn-danger[disabled]:focus,
-fieldset[disabled] .btn-danger:focus,
-.btn-danger.disabled.focus,
-.btn-danger[disabled].focus,
-fieldset[disabled] .btn-danger.focus {
+.btn-petition.disabled:hover,
+.btn-petition[disabled]:hover,
+fieldset[disabled] .btn-petition:hover,
+.btn-petition.disabled:focus,
+.btn-petition[disabled]:focus,
+fieldset[disabled] .btn-petition:focus,
+.btn-petition.disabled.focus,
+.btn-petition[disabled].focus,
+fieldset[disabled] .btn-petition.focus {
   background-color: #d9534f;
   border-color: #d43f3a;
 }
-.btn-danger .badge {
+.btn-petition .badge {
   color: #d9534f;
   background-color: #fff;
 }
@@ -2650,6 +2650,13 @@ fieldset[disabled] .btn-link:hover,
 fieldset[disabled] .btn-link:focus {
   color: #777;
   text-decoration: none;
+}
+.btn-xl,
+.btn-group-xl > .btn {
+    padding: 20px 25px;
+    font-size: 16px;
+    line-height: 1.3333333;
+    border-radius: 2px;
 }
 .btn-lg,
 .btn-group-lg > .btn {
