--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row col-md-offset-2">
 			<div class="col-md-10">
-				<h1 class="text-center"><strike>Unblock</strike> Medium</h1>
+				<h1 class="text-center">Unblock Medium</h1>
 				<center>
 					<a href="https://www.change.org/p/malaysian-communications-and-multimedia-commission-unblock-medium-com-in-malaysia" target="_blank" class="btn btn-petition btn-xl pull-center">Sign Petition &#8594;</a>
 				</center>
