--- a/css/style.css
+++ b/css/style.css
@@ -4232,6 +4232,7 @@ a.badge:focus {
 .jumbotron {
   padding-top: 30vh;
   height: 100vh;
+  width: auto;
   color: inherit;
   background-image: url(../img/bg.jpg);
   background-size: cover;
