--- a/css/style.css
+++ b/css/style.css
@@ -4236,6 +4236,8 @@ a.badge:focus {
   color: inherit;
   background-image: url(../img/bg.jpg);
   background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .jumbotron h1,
 .jumbotron .h1 {
